Archive2/0c/bf88a07b38d711/output
main.cpp:11:15: error: template argument for template type parameter must be a type; did you forget 'typename'?
    std::pair<std::map<K, V>::iterator, bool> ret;
              ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_pair.h:95:18: note: template parameter is declared here
  template<class _T1, class _T2>
                 ^
1 error generated.
